frontend/src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
  text-decoration: none;
}

.sidebar-link {
  text-decoration: none;
  color: inherit; 
  transition: color 0.3s ease, text-decoration 0.3s ease; 
}

.sidebar-link:hover {
  color: #6c63ff; 
  text-decoration: none; 
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.logout-button {
  background: none;        
  border: none;            
  color: inherit;          
  font: inherit;           
  cursor: pointer;        
  text-decoration: none; 
  padding: 0;             
}

.logout-button:hover {
  color: #6c63ff; 
}

